--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:name=".ZeppaApplication"
+        android:name="com.minook.zeppa.ZeppaApplication"
         android:allowBackup="true"
         android:icon="@drawable/zeppa_icon"
         android:label="@string/app_name"
@@ -65,19 +65,21 @@
             android:logo="@drawable/zeppa_icon" >
         </activity>
         <activity
-            android:name="com.minook.zeppa.activity.NewFriendsActivity"
+            android:name="com.minook.zeppa.activity.StartMinglingActivity"
             android:label="@string/add_friends"
             android:logo="@drawable/zeppa_icon" >
         </activity>
         <activity
             android:name="com.minook.zeppa.activity.AbstractEventViewActivity"
             android:label="@string/app_name"
+            android:logo="@drawable/zeppa_icon" 
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.minook.zeppa.activity.NewEventActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:logo="@drawable/zeppa_icon" />
         <activity
-            android:name="com.minook.zeppa.activity.UserActivity"
+            android:name="com.minook.zeppa.activity.UserActivity" 
             android:label="@string/app_name"
             android:logo="@drawable/zeppa_icon" />
 
