--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -79,7 +79,11 @@
             android:label="@string/app_name"
             android:logo="@drawable/zeppa_icon" />
         <activity
-            android:name="com.minook.zeppa.activity.UserActivity" 
+            android:name="com.minook.zeppa.activity.MinglerActivity" 
+            android:label="@string/app_name"
+            android:logo="@drawable/zeppa_icon" />
+        <activity
+            android:name="com.minook.zeppa.activity.DefaultEventViewActivity" 
             android:label="@string/app_name"
             android:logo="@drawable/zeppa_icon" />
 
