--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,17 +6,17 @@
 
     <uses-sdk
         android:minSdkVersion="15"
-        android:targetSdkVersion="20" />
+        android:targetSdkVersion="21" />
 
     <permission
-        android:name="com.minook.zeppa.permission.C2D_MESSAGE"
+        android:name="com.minook.zeppa.gcm.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.minook.zeppa.permission.C2D_MESSAGE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="com.minook.zeppa.gcm.permission.C2D_MESSAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
@@ -72,48 +72,24 @@
         <activity
             android:name="com.minook.zeppa.activity.AbstractEventViewActivity"
             android:label="@string/app_name"
-            android:logo="@drawable/zeppa_icon" 
+            android:logo="@drawable/zeppa_icon"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.minook.zeppa.activity.NewEventActivity"
             android:label="@string/app_name"
             android:logo="@drawable/zeppa_icon" />
         <activity
-            android:name="com.minook.zeppa.activity.MinglerActivity" 
+            android:name="com.minook.zeppa.activity.MinglerActivity"
             android:label="@string/app_name"
             android:logo="@drawable/zeppa_icon" />
         <activity
-            android:name="com.minook.zeppa.activity.DefaultEventViewActivity" 
+            android:name="com.minook.zeppa.activity.DefaultEventViewActivity"
             android:label="@string/app_name"
             android:logo="@drawable/zeppa_icon" />
-
-        <!--
-        <provider android:authorities="com.facade.calendar.calendarprovider" android:name="com.facade.calendar.CalendarFacade" android:permission="signature"/> 
-        
-        
-        <provider
-            android:name="com.tyczj.extendedcalendarview.CalendarProvider"
-            android:authorities="com.tyczj.extendedcalendarview.calendarprovider" 
-            android:permission="signature"/>
-        -->
-
-
-        <!--
-        <receiver
-            android:name="com.google.android.gcm.GCMBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND" >
-                    <service android:name=".GCMIntentService" />
-            
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-
-                <category android:name="com.minook.zeppa" />
-            </intent-filter>
-        </receiver>
-        
-        <service android:name=".GCMIntentService"/>
-        -->
+        <activity
+            android:name="com.minook.zeppa.activity.EditAccountActivity"
+            android:label="@string/app_name"
+            android:logo="@drawable/zeppa_icon" />
 
         <receiver
             android:name="com.minook.zeppa.gcm.ZeppaGCMReceiver"
@@ -122,29 +98,13 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-
-                <category android:name="com.minook.zeppa.GCMIntentService" />
-            </intent-filter>
-        </receiver>
-
-        <service
-            android:name="com.minook.zeppa.gcm.ZeppaGCMService"
-            android:enabled="true" />
-
-        <receiver
-            android:name="com.google.android.gcm.GCMBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND" >
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-
-                <category android:name="com.minook.zeppa" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <action android:name="com.google.android.c2dm.intent.GCM_RECEIVED_ACTION" />
 
                 <category android:name="com.minook.zeppa" />
             </intent-filter>
         </receiver>
+
+        <service android:name="com.minook.zeppa.gcm.ZeppaGCMIntentService" />
     </application>
 
 </manifest>
