--- a/project.properties
+++ b/project.properties
@@ -13,6 +13,6 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 # Project target.
 target=Google Inc.:Google APIs:21
 android.library.reference.1=../../../../../SDKs/android-sdk-macosx/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.3=../pager-sliding-tab_lib
-android.library.reference.2=../android-calendar-facade_lib
-android.library.reference.4=../pull-to-refresh_lib
+android.library.reference.3=../pull-to-refresh_lib
+android.library.reference.2=../pager-sliding-tab_lib
+android.library.reference.4=../ExtendedCalendarView
