Added Refresh Components
Add pull to refresh to StartMinglingActivity and Mingler fragment.
Implemented another runnable to make sure the Zeppa Calendar is Synced
and displayed if the user is using the app

--- a/project.properties
+++ b/project.properties
@@ -15,4 +15,4 @@ target=Google Inc.:Google APIs:21
 android.library.reference.1=../../../../../SDKs/android-sdk-macosx/extras/google/google_play_services/libproject/google-play-services_lib
 android.library.reference.3=../pull-to-refresh_lib
 android.library.reference.2=../pager-sliding-tab_lib
-android.library.reference.4=../ExtendedCalendarView
+android.library.reference.4=../CalendarLibrary
