--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.minook.zeppa"
-    android:versionCode="1"
-    android:versionName="alpha" >
+    android:versionCode="2"
+    android:versionName="beta" >
 
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
 
-    <permission
-        android:name="com.minook.zeppa.gcm.permission.C2D_MESSAGE"
-        android:protectionLevel="signature" />
-
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <uses-permission android:name="com.minook.zeppa.gcm.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.C2D_MESSAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
