--- a/project.properties
+++ b/project.properties
@@ -12,7 +12,7 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 
 # Project target.
 target=Google Inc.:Google APIs:21
-android.library.reference.1=../../../../../SDKs/android-sdk-macosx/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.3=../pull-to-refresh_lib
-android.library.reference.2=../pager-sliding-tab_lib
-android.library.reference.4=../CalendarLibrary
+android.library.reference.1=../../Development/eclipse/zeppaworkspace/CalendarLibrary
+android.library.reference.3=../../Downloads/pager-sliding-tab_lib-master
+android.library.reference.2=../../Development/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.4=../../Downloads/pull-to-refresh_lib-master
