--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <application
         android:name="com.minook.zeppa.ZeppaApplication"
         android:allowBackup="true"
-        android:icon="@drawable/zeppa_icon"
+        android:icon="@drawable/zeppa_apptile"
         android:label="@string/app_name"
         android:testOnly="false"
         android:theme="@style/ZeppaTheme"
@@ -35,7 +35,7 @@
         <activity
             android:name="com.minook.zeppa.activity.LoginActivity"
             android:label="@string/app_name"
-            android:logo="@drawable/zeppa_icon"
+            android:logo="@drawable/zeppa_apptile"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,27 +48,27 @@
         <activity
             android:name="com.minook.zeppa.activity.MainActivity"
             android:label="@string/app_name"
-            android:logo="@drawable/zeppa_icon" >
+            android:logo="@drawable/zeppa_apptile" >
         </activity>
         <activity
             android:name="com.minook.zeppa.activity.NewAccountActivity"
             android:label="@string/app_name"
-            android:logo="@drawable/zeppa_icon" >
+            android:logo="@drawable/zeppa_apptile" >
         </activity>
         <activity
             android:name="com.minook.zeppa.activity.MyEventViewActivity"
             android:label="@string/app_name"
-            android:logo="@drawable/zeppa_icon" >
+            android:logo="@drawable/zeppa_apptile" >
         </activity>
         <activity
             android:name="com.minook.zeppa.activity.StartMinglingActivity"
             android:label="@string/add_friends"
-            android:logo="@drawable/zeppa_icon" >
+            android:logo="@drawable/zeppa_apptile" >
         </activity>
         <activity
             android:name="com.minook.zeppa.activity.AbstractEventViewActivity"
             android:label="@string/app_name"
-            android:logo="@drawable/zeppa_icon"
+            android:logo="@drawable/zeppa_apptile"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.minook.zeppa.activity.NewEventActivity"
@@ -77,15 +77,15 @@
         <activity
             android:name="com.minook.zeppa.activity.MinglerActivity"
             android:label="@string/app_name"
-            android:logo="@drawable/zeppa_icon" />
+            android:logo="@drawable/zeppa_apptile" />
         <activity
             android:name="com.minook.zeppa.activity.DefaultEventViewActivity"
             android:label="@string/app_name"
-            android:logo="@drawable/zeppa_icon" />
+            android:logo="@drawable/zeppa_apptile" />
         <activity
             android:name="com.minook.zeppa.activity.EditAccountActivity"
             android:label="@string/app_name"
-            android:logo="@drawable/zeppa_icon" />
+            android:logo="@drawable/zeppa_apptile" />
 
         <receiver
             android:name="com.minook.zeppa.gcm.ZeppaGCMReceiver"
