--- a/project.properties
+++ b/project.properties
@@ -8,11 +8,12 @@
 # project structure.
 #
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
- proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt:proguard-google-api-client.txt
 
 # Project target.
 target=Google Inc.:Google APIs:21
-android.library.reference.1=../../Development/eclipse/zeppaworkspace/CalendarLibrary
-android.library.reference.3=../../Downloads/pager-sliding-tab_lib-master
-android.library.reference.2=../../Development/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.4=../../Downloads/pull-to-refresh_lib-master
+android.library.reference.1=../CalendarLibrary
+android.library.reference.3=../pager-sliding-tab_lib
+android.library.reference.2=../../../../../SDKs/android-sdk-macosx/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.4=../pull-to-refresh_lib
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt:proguard-google-api-client.txt
+android.library.reference.5=../../../../../SDKs/android-sdk-macosx/extras/android/support/v7/appcompat
