--- a/project.properties
+++ b/project.properties
@@ -11,9 +11,9 @@
 
 # Project target.
 target=Google Inc.:Google APIs:21
-android.library.reference.1=../../Development/eclipse/zeppaworkspace/CalendarLibrary
-android.library.reference.3=../../Downloads/pager-sliding-tab_lib-master
-android.library.reference.2=../../Development/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.4=../../Downloads/pull-to-refresh_lib-master
+android.library.reference.1=../../Development/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.3=../../Downloads/pull-to-refresh_lib-master
+android.library.reference.2=../../Downloads/pager-sliding-tab_lib-master
+android.library.reference.4=../../Development/sdk/extras/android/support/v7/appcompat
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt:proguard-google-api-client.txt
-android.library.reference.5=../../Development/sdk/extras/android/support/v7/appcompat
+android.library.reference.5=../CalendarLibrary
