--- a/project.properties
+++ b/project.properties
@@ -17,3 +17,4 @@ android.library.reference.2=../CalendarLibrary
 android.library.reference.4=../pager-sliding-tab_lib
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt:proguard-google-api-client.txt
 android.library.reference.5=../pull-to-refresh_lib
+android.library.reference.6=../showcase_lib
