--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ assets/
 .classpath
 .project
 Constants.java
+project.properties
+proguard-project.txt
+proguard-google-api-client.txt
+lint.xml
+.project
