--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,9 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <uses-permission android:name="com.google.android.c2dm.permission.C2D_MESSAGE" />
+<!--     <permission android:name="com.minook.zeppa.permission.C2D_MESSAGE" 
+        android:protectionLevel="signature"/> -->
+    <uses-permission android:name="com.minook.zeppa.permission.C2D_MESSAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
@@ -108,7 +110,8 @@
             </intent-filter>
         </receiver>
 
-        <service android:name=".gcm.ZeppaGCMIntentService" />
+        <service 
+            android:name=".gcm.ZeppaGCMIntentService" />
     </application>
 
 </manifest>
