--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -83,7 +83,8 @@
         <activity
             android:name=".activity.NewEventActivity"
             android:label="@string/app_name"
-            android:theme="@style/CustomActionBarTheme" />
+            android:theme="@style/CustomActionBarTheme" 
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activity.MinglerActivity"
             android:label="@string/app_name"
