--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,5 @@ dependencies {
     //    compile 'org.apache.httpcomponents:httpclient:4.4'
     //    compile files('libs/zeppausertouserrelationshipendpoint-v1-1.20.0-SNAPSHOT.jar')
     compile files('libs/zeppaclientapi-v1-1.20.0-SNAPSHOT.jar')
+    compile files('libs/zeppaclientapi-v1-1.21.0-SNAPSHOT.jar')
 }
